Routing - show road numbers on map, fix map moving on route update, fix hover while reordering routes, fix routes being too close when in free move (grid), remove focus from route on map click, zoom map to focused route Maps - show home locations on map, change sort dropdown design to black, fix last used on map list, add link to details page on marker dropdown title, show circle on location filter, fix map list select, fix markers not showing when you first open the map

--- a/src/app/core/components/routing/routing-map/routing-map.component.scss
+++ b/src/app/core/components/routing/routing-map/routing-map.component.scss
@@ -79,6 +79,7 @@
                     .route-info-card {
                         top: 0px !important;
                         left: 0px !important;
+                        pointer-events: none;
                     }
                 }
             }
